# dhn_nclp

./: .gitignore  README.md  __init__.py  benchmark.py  graph_enumerations.py  pyproject.toml  requirements.txt  train.py  train_lp.py  train_nc.py  uv.toml
KC_scripts/CMPNN/: build_IMDB_md_shared_splits.py  build_IMDB_mg_shared_splits.py  build_IMDB_ml_shared_splits.py
KC_scripts/MAGNN/: preprocess_IMDB_rgcn_lp.py  run_IMDB_rgcn_lp.py
configs/: default.yaml  imdb_lp.yaml  imdb_nc.yaml
data/results/: lp_scores_md_v1_seed1566911444.csv  lp_scores_md_v1_seed20241017.csv  lp_scores_md_v1_seed20251017.csv  lp_scores_md_v3_seed1566911444.csv  lp_scores_md_v3_seed20241017.csv  lp_scores_md_v3_seed20251017.csv  lp_scores_mg_v1_seed1566911444.csv  lp_scores_mg_v1_seed20241017.csv  lp_scores_mg_v1_seed20251017.csv  lp_scores_mg_v2_seed1566911444.csv  lp_scores_mg_v2_seed20241017.csv  lp_scores_mg_v2_seed20251017.csv  lp_scores_mg_v3_seed1566911444.csv  lp_scores_mg_v3_seed20241017.csv  lp_scores_mg_v3_seed20251017.csv  lp_scores_mg_v4_seed1566911444.csv  lp_scores_mg_v4_seed20241017.csv  lp_scores_mg_v4_seed20251017.csv  lp_scores_ml_v1_seed1566911444.csv  lp_summary_md_v1.csv  (+21 more)
dhn/: __init__.py  datasets.py  graph_enumerations.py  layers.py  models.py  utils.py
preprocess/: preprocess_DBLP1.py  preprocess_DBLP2.py  preprocess_IMDB_dhn_lp.py  preprocess_IMDB_for_dhn_nc.py  preprocess_IMDB_star.py  preprocess_IMDB_star_t.py  preprocess_IMDB_star_t_2.py  preprocess_IMDB_star_t_3.py
scripts/: aggregate_lp_results.py  inspect_imdb_variants.py
tests/: test_simple_graphs.py
(+131 files in other folders)
