[project]
name = "dhn"
version = "0.1.0"
description = "Deep Homomorphism Networks for node classification and link prediction"
requires-python = ">=3.10,<3.11"
dependencies = [
    "numpy>=1.24,<2",
    "pandas>=2.0",
    "scipy>=1.10",
    "networkx>=3.1",
    "scikit-learn>=1.3",
    "tqdm>=4.65",
    "pyyaml>=6.0",
]

[tool.uv]
package = false
